--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![Design preview for the Social proof section coding challenge](./design/desktop-preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "node-sass sass/main.scss css/style.css -w"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,7 @@
     "url": "https://github.com/jchoi166/FEM-Social-Proof-Section/issues"
   },
   "homepage": "https://github.com/jchoi166/FEM-Social-Proof-Section#readme",
-  "dependencies": {}
+  "dependencies": {
+    "node-sass": "^4.14.1"
+  }
 }
